[gd_scene load_steps=20 format=3 uid="uid://4ful311i8fk8"]

[ext_resource type="Script" uid="uid://58gg35neso2o" path="res://Aliens/AlienPink/alien_1.gd" id="1_6gq8c"]
[ext_resource type="Texture2D" uid="uid://dqsy464qc2qxl" path="res://Aliens/AlienPink/Textures/Evo1Sprite1.png" id="2_ov2v8"]
[ext_resource type="Texture2D" uid="uid://dr41u3frl6cqy" path="res://Aliens/AlienPink/Textures/Evo1Sprite2.png" id="3_vsw6s"]
[ext_resource type="Texture2D" uid="uid://doauy2bsuj88c" path="res://Aliens/AlienPink/Textures/Evo2Sprite1.png" id="4_3mc3o"]
[ext_resource type="Texture2D" uid="uid://bgvfdxc5wi8we" path="res://Aliens/AlienPink/Textures/Evo2Sprite2.png" id="5_2fwm4"]
[ext_resource type="Texture2D" uid="uid://dye1b85dsq841" path="res://Aliens/AlienPink/Textures/Evo3Sprite1.png" id="5_c4wk7"]
[ext_resource type="Texture2D" uid="uid://bwt4r2jivevbq" path="res://Aliens/AlienPink/Textures/Evo3Sprite2.png" id="6_aho6r"]
[ext_resource type="Texture2D" uid="uid://tx8fv0fkvl8u" path="res://Aliens/AlienPink/Textures/Evo4Sprite1.png" id="7_3mc3o"]
[ext_resource type="Texture2D" uid="uid://dstyck5cepeyd" path="res://Aliens/AlienPink/Textures/Evo4Sprite2.png" id="8_c4wk7"]
[ext_resource type="Texture2D" uid="uid://c0w5qgye3q70l" path="res://Aliens/AlienPink/Textures/Evo5Sprite1.png" id="9_aho6r"]
[ext_resource type="Texture2D" uid="uid://btdc0toka1cjd" path="res://Aliens/AlienPink/Textures/Evo5Sprite2.png" id="10_qhc3q"]
[ext_resource type="Texture2D" uid="uid://fijme27a3ulr" path="res://Aliens/AlienPink/Textures/Evo6Sprite1.png" id="11_sqcnr"]
[ext_resource type="Texture2D" uid="uid://dnjskmntb5cf5" path="res://Aliens/AlienPink/Textures/Evo6Sprite2.png" id="12_eaqf5"]
[ext_resource type="Texture2D" uid="uid://b305r2wq3x4yj" path="res://Aliens/AlienPink/Textures/Evo7Sprite1.png" id="13_fmmyh"]
[ext_resource type="Texture2D" uid="uid://ku7p6dhy621r" path="res://Aliens/AlienPink/Textures/Evo7Sprite2.png" id="14_2fwm4"]
[ext_resource type="AudioStream" uid="uid://dal0pgonopff2" path="res://SFX/AlienSpawnMerge/734225__noisyredfox__squeezingplasticbag5.ogg" id="16_c3xrk"]
[ext_resource type="PackedScene" uid="uid://btrqqrwv0s02k" path="res://UI/Label/alien_label.tscn" id="17_j2dyx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m3rl8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ov2v8")
}, {
"duration": 1.0,
"texture": ExtResource("3_vsw6s")
}],
"loop": true,
"name": &"Evo1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3mc3o")
}, {
"duration": 1.0,
"texture": ExtResource("5_2fwm4")
}],
"loop": true,
"name": &"Evo2",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_c4wk7")
}, {
"duration": 1.0,
"texture": ExtResource("6_aho6r")
}],
"loop": true,
"name": &"Evo3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_3mc3o")
}, {
"duration": 1.0,
"texture": ExtResource("8_c4wk7")
}],
"loop": true,
"name": &"Evo4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_aho6r")
}, {
"duration": 1.0,
"texture": ExtResource("10_qhc3q")
}],
"loop": true,
"name": &"Evo5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_sqcnr")
}, {
"duration": 1.0,
"texture": ExtResource("12_eaqf5")
}],
"loop": true,
"name": &"Evo6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_fmmyh")
}, {
"duration": 1.0,
"texture": ExtResource("14_2fwm4")
}],
"loop": true,
"name": &"Evo7",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fmmyh"]
resource_local_to_scene = true
radius = 16.0

[node name="Alien1" type="Area2D" groups=["PinkAlien"]]
z_index = 5
script = ExtResource("1_6gq8c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_m3rl8")
animation = &"Evo2"
autoplay = "Evo1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fmmyh")

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="ManaGenerationTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_c3xrk")
bus = &"Sounds"

[node name="AlienLabel" parent="." instance=ExtResource("17_j2dyx")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="ManaGenerationTimer" to="." method="_on_mana_generation_timer_timeout"]
